opam-version: "2.0"
version: "0.2.1"
maintainer: "Steffen Smolka <smolka@cs.cornell.edu>"
authors: "Steffen Smolka <smolka@cs.cornell.edu>"
homepage: "https://github.com/smolkaj/ocaml-open"
bug-reports: "https://github.com/smolkaj/ocaml-open/issues"
depends: [
  "ocaml" {>= "4.02.3"}
  "jbuilder" {>= "1.0+beta19"}
]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name "-j" jobs] {with-test}
  ["jbuilder" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
dev-repo: "git+https://github.com/smolkaj/ocaml-open.git"
